@startuml
'https://plantuml.com/class-diagram
hide circle
class PlansRepository <<interface>>

title Class Diagram /  As marketing director, I want to change the pricing of a plan

class Plans{
    -name
    - description
    - numberOfMinutes
    -maximumNumberOfUsers
    -musicCollection
     -musicSuggestion
     -annualFee
     -monthlyFee
     -active
     -promoted
     -feeRevision
     +moneyData(long desiredVersion, long desiredVersion, Double annualFee, Double monthlyFee, String username)
}
class PlansViewMapper{
    +toPlansView(Plans plans):PlansView
}
class PlansController{
    +moneyUpdate(final WebRequest request,final String name,final EditPlanMoneyRequest resource):ResponseEntity<PlansView>
    }
class PlansService{
 +moneyUpdate(String name, EditPlanMoneyRequest resource, long desiredVersion):Plans
}



interface PlansRepository
{
+findByName_Name(String name): Optional<Plans>
+<S extends T> S save(S entity)

}


PlansController ..> PlansService: uses >
PlansService ..> PlansRepository: uses >
PlansRepository ..> Plans: < record
PlansService ..> Plans: uses >
PlansController ..> PlansViewMapper: uses >
@enduml